// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Upsell /> Basic Upsell 1`] = `
<div
  className="box paddingX6 paddingY6 relative rounding4 shadow smDirectionRow smPaddingX8 smPaddingY8 xsDirectionColumn xsDisplayFlex"
>
  <div
    className="box flexWrap smDisplayFlex smMarginBottomN3 smMarginTopN3"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="box itemsCenter justifyCenter smDirectionRow smPaddingY3 xsDirectionColumn xsDisplayFlex"
    >
      <div
        className="box"
        style={
          Object {
            "maxWidth": 648,
          }
        }
      >
        <div
          className="box itemsCenter marginBottomAuto marginEnd0 marginStart0 marginTopAuto smDisplayBlock smMarginEnd6 smMarginStart0 xsDirectionColumn xsDisplayFlex"
        >
          <div
            className="box smDisplayNone"
          >
            <div
              className="Text fontSize3 darkGray alignCenter breakWord fontWeightNormal"
            >
              Insert a clever upsell message here
            </div>
          </div>
          <div
            className="box smDisplayBlock xsDisplayNone"
          >
            <div
              className="Text fontSize3 darkGray alignLeft breakWord fontWeightNormal"
            >
              Insert a clever upsell message here
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="box marginStartAuto smDisplayFlex smMarginEnd4 smPaddingY3"
    />
  </div>
</div>
`;

exports[`<Upsell /> message + title + primaryLink + dismissButton + image 1`] = `
<div
  className="box paddingX6 paddingY6 relative rounding4 shadow smDirectionRow smPaddingX8 smPaddingY8 xsDirectionColumn xsDisplayFlex"
>
  <div
    className="box flexWrap smDisplayFlex smMarginBottomN3 smMarginTopN3"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="box itemsCenter justifyCenter marginBottom4 smDirectionRow smMarginBottom0 smPaddingY3 xsDirectionColumn xsDisplayFlex"
    >
      <div
        className="box flexNone marginBottom4 smMarginBottom0"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <div
          className="Mask rounding0 willChangeTransform"
          style={
            Object {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <svg
            aria-hidden={null}
            aria-label="Pin"
            className="icon darkGray iconBlock"
            height={32}
            role="img"
            viewBox="0 0 24 24"
            width={32}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
      </div>
      <div
        className="box"
        style={
          Object {
            "maxWidth": 648,
          }
        }
      >
        <div
          className="box itemsCenter marginBottomAuto marginEnd0 marginStart0 marginTopAuto smDisplayBlock smMarginEnd6 smMarginStart6 xsDirectionColumn xsDisplayFlex"
        >
          <div
            className="box smDisplayNone"
          >
            <div
              className="box marginBottom2"
            >
              <h3
                className="Heading fontSize1 darkGray alignCenter breakWord"
              >
                A Title
              </h3>
            </div>
            <div
              className="Text fontSize3 darkGray alignCenter breakWord fontWeightNormal"
            >
              Insert a clever upsell message here
            </div>
          </div>
          <div
            className="box smDisplayBlock xsDisplayNone"
          >
            <div
              className="box marginBottom2"
            >
              <h3
                className="Heading fontSize1 darkGray alignLeft breakWord"
              >
                A Title
              </h3>
            </div>
            <div
              className="Text fontSize3 darkGray alignLeft breakWord fontWeightNormal"
            >
              Insert a clever upsell message here
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="box marginStartAuto smDisplayFlex smMarginEnd4 smPaddingY3"
    >
      <div
        className="box itemsCenter justifyCenter paddingX1 smDisplayFlex smMarginBottomAuto smMarginTopAuto xsDisplayBlock"
      >
        <a
          className="link hideOutline tapTransition block pill accessibilityOutline buttonLink button lg red"
          href="pinterest.com"
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={null}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          rel=""
          tabIndex={0}
          target={null}
        >
          <div
            className="Text fontSize3 white alignCenter fontWeightBold"
          >
            Visit Pinterest
          </div>
        </a>
      </div>
    </div>
  </div>
  <div
    className="rtlPos"
  >
    <button
      aria-label="Dismiss banner"
      className="button tapTransition enabled"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <div
        className="pog transparent"
        style={
          Object {
            "height": 48,
            "width": 48,
          }
        }
      >
        <svg
          aria-hidden={true}
          aria-label=""
          className="icon darkGray iconBlock"
          height={16}
          role="img"
          viewBox="0 0 24 24"
          width={16}
        >
          <path
            d="test-file-stub"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`<Upsell /> message + title + primaryLink + dismissButton 1`] = `
<div
  className="box paddingX6 paddingY6 relative rounding4 shadow smDirectionRow smPaddingX8 smPaddingY8 xsDirectionColumn xsDisplayFlex"
>
  <div
    className="box flexWrap smDisplayFlex smMarginBottomN3 smMarginTopN3"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="box itemsCenter justifyCenter marginBottom4 smDirectionRow smMarginBottom0 smPaddingY3 xsDirectionColumn xsDisplayFlex"
    >
      <div
        className="box"
        style={
          Object {
            "maxWidth": 648,
          }
        }
      >
        <div
          className="box itemsCenter marginBottomAuto marginEnd0 marginStart0 marginTopAuto smDisplayBlock smMarginEnd6 smMarginStart0 xsDirectionColumn xsDisplayFlex"
        >
          <div
            className="box smDisplayNone"
          >
            <div
              className="box marginBottom2"
            >
              <h3
                className="Heading fontSize1 darkGray alignCenter breakWord"
              >
                A Title
              </h3>
            </div>
            <div
              className="Text fontSize3 darkGray alignCenter breakWord fontWeightNormal"
            >
              Insert a clever upsell message here
            </div>
          </div>
          <div
            className="box smDisplayBlock xsDisplayNone"
          >
            <div
              className="box marginBottom2"
            >
              <h3
                className="Heading fontSize1 darkGray alignLeft breakWord"
              >
                A Title
              </h3>
            </div>
            <div
              className="Text fontSize3 darkGray alignLeft breakWord fontWeightNormal"
            >
              Insert a clever upsell message here
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="box marginStartAuto smDisplayFlex smMarginEnd4 smPaddingY3"
    >
      <div
        className="box itemsCenter justifyCenter paddingX1 smDisplayFlex smMarginBottomAuto smMarginTopAuto xsDisplayBlock"
      >
        <a
          className="link hideOutline tapTransition block pill accessibilityOutline buttonLink button lg red"
          href="pinterest.com"
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={null}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          rel=""
          tabIndex={0}
          target={null}
        >
          <div
            className="Text fontSize3 white alignCenter fontWeightBold"
          >
            Visit Pinterest
          </div>
        </a>
      </div>
    </div>
  </div>
  <div
    className="rtlPos"
  >
    <button
      aria-label="Dismiss banner"
      className="button tapTransition enabled"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <div
        className="pog transparent"
        style={
          Object {
            "height": 48,
            "width": 48,
          }
        }
      >
        <svg
          aria-hidden={true}
          aria-label=""
          className="icon darkGray iconBlock"
          height={16}
          role="img"
          viewBox="0 0 24 24"
          width={16}
        >
          <path
            d="test-file-stub"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`<Upsell /> message + title + primaryLink + secondaryLink 1`] = `
<div
  className="box paddingX6 paddingY6 relative rounding4 shadow smDirectionRow smPaddingX8 smPaddingY8 xsDirectionColumn xsDisplayFlex"
>
  <div
    className="box flexWrap smDisplayFlex smMarginBottomN3 smMarginTopN3"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="box itemsCenter justifyCenter marginBottom4 smDirectionRow smMarginBottom0 smPaddingY3 xsDirectionColumn xsDisplayFlex"
    >
      <div
        className="box"
        style={
          Object {
            "maxWidth": 648,
          }
        }
      >
        <div
          className="box itemsCenter marginBottomAuto marginEnd0 marginStart0 marginTopAuto smDisplayBlock smMarginEnd6 smMarginStart0 xsDirectionColumn xsDisplayFlex"
        >
          <div
            className="box smDisplayNone"
          >
            <div
              className="box marginBottom2"
            >
              <h3
                className="Heading fontSize1 darkGray alignCenter breakWord"
              >
                A Title
              </h3>
            </div>
            <div
              className="Text fontSize3 darkGray alignCenter breakWord fontWeightNormal"
            >
              Insert a clever upsell message here
            </div>
          </div>
          <div
            className="box smDisplayBlock xsDisplayNone"
          >
            <div
              className="box marginBottom2"
            >
              <h3
                className="Heading fontSize1 darkGray alignLeft breakWord"
              >
                A Title
              </h3>
            </div>
            <div
              className="Text fontSize3 darkGray alignLeft breakWord fontWeightNormal"
            >
              Insert a clever upsell message here
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="box marginStartAuto smDisplayFlex smMarginEnd4 smPaddingY3"
    >
      <div
        className="box itemsCenter justifyCenter paddingX1 smDisplayFlex smMarginBottomAuto smMarginTopAuto xsDisplayBlock"
      >
        <a
          className="link hideOutline tapTransition block pill accessibilityOutline buttonLink button lg gray"
          href="pinterest.com/help"
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={null}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          rel=""
          tabIndex={0}
          target={null}
        >
          <div
            className="Text fontSize3 darkGray alignCenter fontWeightBold"
          >
            Learn more
          </div>
        </a>
      </div>
      <div
        className="box itemsCenter justifyCenter marginTop2 paddingX1 smDisplayFlex smMarginBottomAuto smMarginTopAuto xsDisplayBlock"
      >
        <a
          className="link hideOutline tapTransition block pill accessibilityOutline buttonLink button lg red"
          href="pinterest.com"
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={null}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          rel=""
          tabIndex={0}
          target={null}
        >
          <div
            className="Text fontSize3 white alignCenter fontWeightBold"
          >
            Visit Pinterest
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Upsell /> message + title + primaryLink 1`] = `
<div
  className="box paddingX6 paddingY6 relative rounding4 shadow smDirectionRow smPaddingX8 smPaddingY8 xsDirectionColumn xsDisplayFlex"
>
  <div
    className="box flexWrap smDisplayFlex smMarginBottomN3 smMarginTopN3"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="box itemsCenter justifyCenter marginBottom4 smDirectionRow smMarginBottom0 smPaddingY3 xsDirectionColumn xsDisplayFlex"
    >
      <div
        className="box"
        style={
          Object {
            "maxWidth": 648,
          }
        }
      >
        <div
          className="box itemsCenter marginBottomAuto marginEnd0 marginStart0 marginTopAuto smDisplayBlock smMarginEnd6 smMarginStart0 xsDirectionColumn xsDisplayFlex"
        >
          <div
            className="box smDisplayNone"
          >
            <div
              className="box marginBottom2"
            >
              <h3
                className="Heading fontSize1 darkGray alignCenter breakWord"
              >
                A Title
              </h3>
            </div>
            <div
              className="Text fontSize3 darkGray alignCenter breakWord fontWeightNormal"
            >
              Insert a clever upsell message here
            </div>
          </div>
          <div
            className="box smDisplayBlock xsDisplayNone"
          >
            <div
              className="box marginBottom2"
            >
              <h3
                className="Heading fontSize1 darkGray alignLeft breakWord"
              >
                A Title
              </h3>
            </div>
            <div
              className="Text fontSize3 darkGray alignLeft breakWord fontWeightNormal"
            >
              Insert a clever upsell message here
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="box marginStartAuto smDisplayFlex smMarginEnd4 smPaddingY3"
    >
      <div
        className="box itemsCenter justifyCenter paddingX1 smDisplayFlex smMarginBottomAuto smMarginTopAuto xsDisplayBlock"
      >
        <a
          className="link hideOutline tapTransition block pill accessibilityOutline buttonLink button lg red"
          href="pinterest.com"
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={null}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          rel=""
          tabIndex={0}
          target={null}
        >
          <div
            className="Text fontSize3 white alignCenter fontWeightBold"
          >
            Visit Pinterest
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Upsell /> message + title 1`] = `
<div
  className="box paddingX6 paddingY6 relative rounding4 shadow smDirectionRow smPaddingX8 smPaddingY8 xsDirectionColumn xsDisplayFlex"
>
  <div
    className="box flexWrap smDisplayFlex smMarginBottomN3 smMarginTopN3"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="box itemsCenter justifyCenter smDirectionRow smPaddingY3 xsDirectionColumn xsDisplayFlex"
    >
      <div
        className="box"
        style={
          Object {
            "maxWidth": 648,
          }
        }
      >
        <div
          className="box itemsCenter marginBottomAuto marginEnd0 marginStart0 marginTopAuto smDisplayBlock smMarginEnd6 smMarginStart0 xsDirectionColumn xsDisplayFlex"
        >
          <div
            className="box smDisplayNone"
          >
            <div
              className="box marginBottom2"
            >
              <h3
                className="Heading fontSize1 darkGray alignCenter breakWord"
              >
                A Title
              </h3>
            </div>
            <div
              className="Text fontSize3 darkGray alignCenter breakWord fontWeightNormal"
            >
              Insert a clever upsell message here
            </div>
          </div>
          <div
            className="box smDisplayBlock xsDisplayNone"
          >
            <div
              className="box marginBottom2"
            >
              <h3
                className="Heading fontSize1 darkGray alignLeft breakWord"
              >
                A Title
              </h3>
            </div>
            <div
              className="Text fontSize3 darkGray alignLeft breakWord fontWeightNormal"
            >
              Insert a clever upsell message here
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="box marginStartAuto smDisplayFlex smMarginEnd4 smPaddingY3"
    />
  </div>
</div>
`;
